@@ -202,6 +202,9 @@
                 <configuration>
                     <source>21</source>
                     <doclint>none</doclint>
+                    <additionalJOptions>
+                        <additionalJOption>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</additionalJOption>
+                    </additionalJOptions>
                 </configuration>
                 <executions>
                     <execution>
